# claude-code-search

./: .gitignore  README.md  pyproject.toml
src/claude_code_search/: chunker.py  cli.py  config.py  embedder.py  indexer.py  models.py  ollama_client.py  parser.py  scheduler.py  searcher.py  store.py  summarizer.py  viewer.py  walker.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_indexer.py  test_ollama_client.py  test_parser.py  test_searcher.py  test_store.py  test_summarizer.py  test_viewer.py  test_walker.py
tests/fixtures/sample_project/: aaa.jsonl  bbb.jsonl
