[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-search"
version = "0.1.0"
description = "Local semantic search over Claude Code conversation history"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.5",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
ccsearch = "claude_code_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
