[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-search"
version = "0.2.0"
description = "Local semantic search over Claude Code conversation history"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "shivaam"}]
keywords = ["claude", "claude-code", "search", "semantic-search", "conversation", "history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.5",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ccsearch = "claude_code_search.cli:main"

[project.urls]
Homepage = "https://github.com/shivaam/claude-code-search"
Repository = "https://github.com/shivaam/claude-code-search"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
